[gd_scene load_steps=2 format=3 uid="uid://bmes58myfngpq"]

[ext_resource type="Script" path="res://scenes/components/player/legs/dash/PlayerLegsDash.gd" id="1_wvo5f"]

[node name="PlayerLegsDash" type="Node3D"]
script = ExtResource("1_wvo5f")
metadata/_edit_lock_ = true

[node name="DashTimeout" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="DashTimeout" to="." method="_on_dash_timeout_timeout"]
